added ... index.html style.css file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
 <p id="exemple1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, cupiditate!</p>
+<h1 id="exemple2">Lorem ipsum dolor sit amet.
+</h1>
+<h2 id="exemple3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus nam veritatis ea sapiente magnam ducimus similique enim molestiae necessitatibus repudiandae!</h2>
+<h3 id="exemple4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minus modi eaque, qui ipsum deleniti.</h3>
 </body>
 </html>
